fix(webapp): removed extra space around head-first dropdown

--- a/packages/pyroscope-flamegraph/src/Toolbar.module.css
+++ b/packages/pyroscope-flamegraph/src/Toolbar.module.css
@@ -24,8 +24,10 @@
 
 .fitModeDropdownSmall {
   min-width: 70px;
+  margin: 0;
 }
 
 .fitModeDropdownLarge {
   min-width: 100px;
+  margin: 0;
 }
